Extent report version 4 implemented

--- a/test-output/index.html
+++ b/test-output/index.html
@@ -145,6 +145,7 @@
   &lt;listeners&gt;
     &lt;listener class-name=&quot;org.uncommons.reportng.HTMLReporter&quot;/&gt;
     &lt;listener class-name=&quot;org.uncommons.reportng.JUnitXMLReporter&quot;/&gt;
+    &lt;listener class-name=&quot;main.java.assist.ListenerImplementation&quot;/&gt;
   &lt;/listeners&gt;
   &lt;test thread-count=&quot;5&quot; name=&quot;testngTest1&quot;&gt;
     &lt;classes&gt;
@@ -192,12 +193,12 @@ data.addRows(1);
 data.setCell(0, 0, 0)
 data.setCell(0, 1, 'LoginAsBankManger')
 data.setCell(0, 2, 'main.java.base.BaseTest')
-data.setCell(0, 3, 900);
+data.setCell(0, 3, 4846);
 window.suiteTableData['DataDriverFrameWork']= { tableData: data, tableDiv: 'times-div-DataDriverFrameWork'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 900 ms</span>
+              <span class="suite-total-time">Total running time: 4 seconds</span>
               <div id="times-div-DataDriverFrameWork">
               </div> <!-- times-div-DataDriverFrameWork -->
             </div> <!-- times-div -->
@@ -230,11 +231,11 @@ return data;
               </div> <!-- configuration-suite before -->
               <div class="test-method">
                 <span class="method-name">LoginAsBankManger</span>
-                <span class="method-start">25539 ms</span>
+                <span class="method-start">14565 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-suite after">
                 <span class="method-name">tearDown</span>
-                <span class="method-start">26513 ms</span>
+                <span class="method-start">21244 ms</span>
               </div> <!-- configuration-suite after -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
