--- a/test-output/old/DataDriverFrameWork/methods.html
+++ b/test-output/old/DataDriverFrameWork/methods.html
@@ -1,10 +1,10 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>DataDriverFrameWork</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="628fdf">  <td>19/09/22 03:23:50</td>   <td>0</td> <td title="&gt;&gt;BasePage.setUp()[pri:0, instance:main.java.base.BaseTest@4493d195]">&gt;&gt;setUp</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@662736689</td>   <td></td> </tr>
-<tr bgcolor="efef64">  <td>19/09/22 03:24:15</td>   <td>25525</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="BaseTest.LoginAsBankManger()[pri:0, instance:main.java.base.BaseTest@4493d195]">LoginAsBankManger</td> 
-  <td>main@662736689</td>   <td></td> </tr>
-<tr bgcolor="628fdf">  <td>19/09/22 03:24:16</td>   <td>26500</td> <td title="&lt;&lt;BasePage.tearDown()[pri:0, instance:main.java.base.BaseTest@4493d195]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@662736689</td>   <td></td> </tr>
+<tr bgcolor="85a3ee">  <td>19/11/10 17:40:12</td>   <td>0</td> <td title="&gt;&gt;BasePage.setUp()[pri:0, instance:main.java.base.BaseTest@2f943d71]">&gt;&gt;setUp</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1121453612</td>   <td></td> </tr>
+<tr bgcolor="ecbaaa">  <td>19/11/10 17:40:27</td>   <td>14536</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="BaseTest.LoginAsBankManger()[pri:0, instance:main.java.base.BaseTest@2f943d71]">LoginAsBankManger</td> 
+  <td>main@1121453612</td>   <td></td> </tr>
+<tr bgcolor="85a3ee">  <td>19/11/10 17:40:33</td>   <td>21215</td> <td title="&lt;&lt;BasePage.tearDown()[pri:0, instance:main.java.base.BaseTest@2f943d71]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1121453612</td>   <td></td> </tr>
 </table>
